services/pihole/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - port: 80
    targetPort: 80
    name: pihole-admin
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  loadBalancerIP: 192.168.4.120
