services/pihole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - heimdall.homelab.kevinlutzer.ca
    secretName: heimdall-kevinlutzer-ca-tls
  rules:
  - host: heimdall.homelab.kevinlutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole
              port:
                number: 80
